--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </article>
 
         <aside></aside>
-        <footer>bui chi thanh</footer>
+        <footer>Bùi Chí Thanh</footer>
 
 
 
