bo m dang uppdate

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <meta charset="UTF-8">
@@ -30,33 +31,91 @@
                 </div>
             </div>
         </header>
-        <nav>
+        <nav class="menu">
             <ul>
                 <li class="li-home">
                     <a href="index.html"><i id="icon-home" class="fa-solid fa-house"></i></a>
                 </li>
-                <li><a href="#">Giới thiệu</a></li>
-                <li><a href="#">Tổ chức</a></li>
-                <li><a href="#">Thông báo & Tin tức</a></li>
-                <li><a href="#">Hướng nghiệp & Tuyển sinh</a></li>
-                <li><a href="#">Khu nội trú</a></li>
-                <li><a href="#">Tài nguyên</a></li>
-                <li><a href="#">Giáo dục - Khoa học</a></li>
+                <li id="about">
+                    <a href="">Giới thiệu</a>
+                    <ul>
+                        <li><a href="">Truyền thống nhà trường</a></li>
+                        <li><a href="">Tóm tắt thành tích giảng dạy</a></li>
+                        <li><a href="">Phần thưởng và danh hiệu</a></li>
+                    </ul>
+
+                </li>
+                <li id="organ"><a href="#">Tổ chức</a></li>
+                <li id="perfomance"><a href="#">Thông báo & Tin tức</a></li>
+                <li id="vocational guidance"><a href="#">Hướng nghiệp & Tuyển sinh</a></li>
+                <li id="broading"><a href="#">Khu nội trú</a></li>
+                <li id="resources"><a href="#">Tài nguyên</a></li>
+                <li id="education"><a href="#">Giáo dục - Khoa học</a></li>
 
             </ul>
         </nav>
         <div class="slogun">
             <marquee>
-                <h2><i id="star" class="fa-solid fa-star"></i>Giá trị cốt lõi: trí tuệ, nhân văn, trách nhiệm, tự tôn, sáng tạo</h2>
+                <h2><i id="star" class="fa-solid fa-star"></i>Giá trị cốt lõi: trí tuệ, nhân văn, trách nhiệm, tự tôn,
+                    sáng tạo</h2>
             </marquee>
         </div>
 
-        <article>
-            <div class="banner"></div>
-        </article>
 
-        <aside></aside>
-        <footer>Bùi Chí Thanh</footer>
+        <div class="banner">
+
+        </div>
+
+        <hr>
+
+
+        <div class="big-infomation">
+            <div class="articel">
+                <div class="articel-child">
+                    <img src="/img/thivao10.png" alt="">
+                  <div class="link"> 
+                    <a href="#">Danh sách phòng thi kì thi Tuyển  sinh vào  lớp 10 năm học<br> 2022 - 2023</a>
+                    <p>23/05/2022</p>
+                </div> 
+                </div>
+            </div>
+
+            <div class="aside">
+                <h3>
+                    <i id="bell" class="fa-solid fa-bell"></i> Tin mới nhận
+                </h3>
+               <div class="new" >
+                   <img src="/img/foolball.png" alt=""> 
+                   <a href="">Giao lưu bóng đá Chào mừng kỷ niệm 47 năm Giải phóng Miền ...</a>
+               </div>
+               <div class="new" >
+                <img src="/img/foolball.png" alt=""> 
+                <a href="">[Bản tin số 9] - MÙA QUẢ NGỌT.</a>
+                </div>
+                <div class="new" >
+                <img src="/img/foolball.png" alt=""> 
+                <a href="">Kế hoạch tổ chức các hoạt động hưởng ứng ngày sách và văn </a>
+                </div>
+                <div class="new" >
+                    <img src="/img/foolball.png" alt=""> 
+                    <a href="">Công văn về việc thi hành pháp luật về xử lý vi phạm hành ...</a>
+                </div>
+                <div class="new" >
+                    <img src="/img/foolball.png" alt=""> 
+                    <a href="">Công văn 435 về  việc rà soát,  đăng ký nhu cầu dự thi nâng ...</a>
+                </div>
+                <div class="new" >
+                    <img src="/img/foolball.png" alt=""> 
+                    <a href="">Giao lưu bóng đá Chào mừng kỷ niệm 47 năm Giải phóng Miền ...</a>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- <footer>Bùi Chí Thanh</footer> -->
+
+
+
 
 
 
