--- a/index.html
+++ b/index.html
@@ -31,26 +31,26 @@
                 </div>
             </div>
         </header>
+
         <nav class="menu">
             <ul>
                 <li class="li-home">
                     <a href="index.html"><i id="icon-home" class="fa-solid fa-house"></i></a>
                 </li>
-                <li id="about">
+                <li>
                     <a href="">Giới thiệu</a>
-                    <ul>
+                    <ul class="about">
                         <li><a href="">Truyền thống nhà trường</a></li>
                         <li><a href="">Tóm tắt thành tích giảng dạy</a></li>
                         <li><a href="">Phần thưởng và danh hiệu</a></li>
                     </ul>
-
                 </li>
-                <li id="organ"><a href="#">Tổ chức</a></li>
-                <li id="perfomance"><a href="#">Thông báo & Tin tức</a></li>
-                <li id="vocational guidance"><a href="#">Hướng nghiệp & Tuyển sinh</a></li>
-                <li id="broading"><a href="#">Khu nội trú</a></li>
-                <li id="resources"><a href="#">Tài nguyên</a></li>
-                <li id="education"><a href="#">Giáo dục - Khoa học</a></li>
+                <li><a href="#">Tổ chức</a></li>
+                <li><a href="#">Thông báo & Tin tức</a></li>
+                <li><a href="#">Hướng nghiệp & Tuyển sinh</a></li>
+                <li><a href="#">Khu nội trú</a></li>
+                <li><a href="#">Tài nguyên</a></li>
+                <li><a href="#">Giáo dục - Khoa học</a></li>
 
             </ul>
         </nav>
@@ -73,46 +73,67 @@
             <div class="articel">
                 <div class="articel-child">
                     <img src="/img/thivao10.png" alt="">
-                  <div class="link"> 
-                    <a href="#">Danh sách phòng thi kì thi Tuyển  sinh vào  lớp 10 năm học<br> 2022 - 2023</a>
-                    <p>23/05/2022</p>
-                </div> 
+                    <div class="link">
+                        <a href="#">Danh sách phòng thi kì thi Tuyển sinh vào lớp 10 năm học<br> 2022 - 2023</a>
+                        <p>23/05/2022</p>
+                    </div>
+                </div>
+
+                <div class="articel-annouce">
+                    <div class="annouce-1">
+                        <img src="img/annouceee1.png" alt="">
+                        <a href="">Địa điểm và lịch thi tuyển sinh vào lớp 10 năm học 2022 - 2023</a>
+                    </div>
+                    <div class="annouce-1">
+                        <img src="img/loaloaloa.png" alt="">
+                        <a href="">Thông báo số lượng hồ sơ đăng kí dự thi tuyển sinh vào lớp 10 năm học 2022 - 2023 (16h00 ngày 21/5)</a>
+                    </div>
+                    <div class="annouce-1">
+                        <img src="img/loaloaloa.png" alt="">
+                        <a href="">Thông báo số lượng hồ sơ đăng kí dự thi tuyển sinh vào lớp 10 năm học 2022 - 2023 (10h30 ngày 21/5)</a>
+                    </div>
+                    <div class="annouce-1">
+                        <img src="img/loaloaloa.png" alt="">
+                        <a href="">Thông báo số lượng hồ sơ đăng kí dự thi tuyển sinh vào lớp 10 năm học 2022 - 2023 (16h00 ngày 21/5)</a>
+                    </div>
                 </div>
             </div>
+            
+
 
             <div class="aside">
                 <h3>
                     <i id="bell" class="fa-solid fa-bell"></i> Tin mới nhận
                 </h3>
-               <div class="new" >
-                   <img src="/img/foolball.png" alt=""> 
-                   <a href="">Giao lưu bóng đá Chào mừng kỷ niệm 47 năm Giải phóng Miền ...</a>
-               </div>
-               <div class="new" >
-                <img src="/img/foolball.png" alt=""> 
-                <a href="">[Bản tin số 9] - MÙA QUẢ NGỌT.</a>
-                </div>
-                <div class="new" >
-                <img src="/img/foolball.png" alt=""> 
-                <a href="">Kế hoạch tổ chức các hoạt động hưởng ứng ngày sách và văn </a>
-                </div>
-                <div class="new" >
-                    <img src="/img/foolball.png" alt=""> 
-                    <a href="">Công văn về việc thi hành pháp luật về xử lý vi phạm hành ...</a>
-                </div>
-                <div class="new" >
-                    <img src="/img/foolball.png" alt=""> 
-                    <a href="">Công văn 435 về  việc rà soát,  đăng ký nhu cầu dự thi nâng ...</a>
-                </div>
-                <div class="new" >
-                    <img src="/img/foolball.png" alt=""> 
+                <div class="new">
+                    <img src="/img/da banh.png" alt="">
                     <a href="">Giao lưu bóng đá Chào mừng kỷ niệm 47 năm Giải phóng Miền ...</a>
                 </div>
+                <div class="new">
+                    <img src="/img/muaquangot.png" alt="">
+                    <a href="">[Bản tin số 9] - MÙA QUẢ NGỌT.</a>
+                </div>
+                <div class="new">
+                    <img src="/img/plan.png" alt="">
+                    <a href="">Kế hoạch tổ chức các hoạt động hưởng ứng ngày sách và văn </a>
+                </div>
+                <div class="new">
+                    <img src="/img/congvan.png" alt="">
+                    <a href="">Công văn về việc thi hành pháp luật về xử lý vi phạm hành ...</a>
+                </div>
+                <!-- <div class="new">
+                    <img src="/img/congvan434.png" alt="">
+                    <a href="">Công văn 435 về việc rà soát, đăng ký nhu cầu dự thi nâng ...</a>
+                </div>
+                <div class="new">
+                    <img src="/img/foolball.png" alt="">
+                    <a href="">Giao lưu bóng đá Chào mừng kỷ niệm 47 năm Giải phóng Miền ...</a>
+                </div> -->
             </div>
 
         </div>
 
-        <!-- <footer>Bùi Chí Thanh</footer> -->
+        <footer>Bùi Chí Thanh</footer>
 
 
 
@@ -121,6 +142,7 @@
 
 
     </div>
+    <!--END CONTAINER-->
 </body>
 
 </html>
