--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/img/logooooo.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +13,9 @@
 
 <body>
     <div class="container">
-        <header>
+        <header>    
             <div class="logo">
-                <img src="img/2019_11_16_10_00_16_logo_381_99.jpg" alt="">
+                <img src="img/perfomance.jpg" alt="">
             </div>
             <div class="award">
                 <img src="img/2019_11_16_10_00_16_huan-chuong.png" alt="">
@@ -23,7 +23,7 @@
             <div class="sign-search">
                 <div class="sign">
                     <i class="fa-solid fa-circle-user" id="icon-sign"></i>
-                    <a href="#" id="text-sgin">Đăng nhập</a>
+                    <a href="login.html" id="text-sgin">Đăng nhập</a>
                 </div>
                 <div class="search">
                     <input type="text" placeholder="Search..." id="search">
@@ -40,9 +40,9 @@
                 <li>
                     <a href="">Giới thiệu</a>
                     <ul class="about">
-                        <li><a href="">Truyền thống nhà trường</a></li>
-                        <li><a href="">Tóm tắt thành tích giảng dạy</a></li>
-                        <li><a href="">Phần thưởng và danh hiệu</a></li>
+                        <li><a href="">Truyền thống </a></li>
+                        <li><a href="">Thành tích</a></li>
+                        <li><a href="">Phần thưởng</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Tổ chức</a></li>
@@ -86,19 +86,22 @@
                     </div>
                     <div class="annouce-1">
                         <img src="img/loaloaloa.png" alt="">
-                        <a href="">Thông báo số lượng hồ sơ đăng kí dự thi tuyển sinh vào lớp 10 năm học 2022 - 2023 (16h00 ngày 21/5)</a>
+                        <a href="">Thông báo số lượng hồ sơ đăng kí dự thi tuyển sinh vào lớp 10 năm học 2022 - 2023
+                            (16h00 ngày 21/5)</a>
                     </div>
                     <div class="annouce-1">
                         <img src="img/loaloaloa.png" alt="">
-                        <a href="">Thông báo số lượng hồ sơ đăng kí dự thi tuyển sinh vào lớp 10 năm học 2022 - 2023 (10h30 ngày 21/5)</a>
+                        <a href="">Thông báo số lượng hồ sơ đăng kí dự thi tuyển sinh vào lớp 10 năm học 2022 - 2023
+                            (10h30 ngày 21/5)</a>
                     </div>
                     <div class="annouce-1">
                         <img src="img/loaloaloa.png" alt="">
-                        <a href="">Thông báo số lượng hồ sơ đăng kí dự thi tuyển sinh vào lớp 10 năm học 2022 - 2023 (16h00 ngày 21/5)</a>
+                        <a href="">Thông báo số lượng hồ sơ đăng kí dự thi tuyển sinh vào lớp 10 năm học 2022 - 2023
+                            (16h00 ngày 21/5)</a>
                     </div>
                 </div>
             </div>
-            
+
 
 
             <div class="aside">
@@ -133,7 +136,34 @@
 
         </div>
 
-        <footer>Bùi Chí Thanh</footer>
+        <footer>
+            <div class="footer-left">
+                <h4>Trường THPT chuyên Lê Hồng Phong</h4>
+                <div class=".adress-footer">
+                    <i id="address" class="fa-solid fa-location-dot"></i> 
+                    Địa chỉ: 76 Vị Xuyên, phường Vị Xuyên, thành phố Nam Định, tỉnh Nam Định
+                </div>
+                <div class="phone_number-footer">
+                    <i id="phone" class=" fa-solid fa-phone-volume"></i> 
+                    Điện thoại: 0228 3640 297   
+                </div>
+            </div>
+
+            <div class="footer-right">
+                <div class="active_person">
+                    <i id="user" class="fa-solid fa-user"></i>
+                   Số người Online : <span>219</span> 
+                </div>
+                <div class="sum_person">
+                    <i id="users" class="fa-solid fa-user-group"></i>
+                    Tổng số: <span>36045803</span>
+                </div>
+                <div class="creat">
+                   <p> <i class="fa-solid fa-paint-roller"></i> Design by <a id="author" target="_blank" href="https://www.facebook.com/homnaytoibuonf/">Bùi Chí Thanh</a></p> 
+                    
+                </div>
+            </div>
+        </footer>
 
 
 
