--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </ul>
                 </li>
                 <li><a href="#">Hướng nghiệp & Tuyển sinh</a>
-                    <ul class="huongnghiep">
+                    <ul class="vocational-guidance  ">
                         <li><a href=""><i id="about1" class="fa-solid fa-circle-play"></i>Thông tin tuyển sinh</a></li> 
                         <li><a href=""><i id="about1" class="fa-solid fa-circle-play"></i>Giáo dục hướng nghiệp</a></li>
                         <li><a href=""><i id="about1" class="fa-solid fa-circle-play"></i>Thông tin du học</a></li>
@@ -85,7 +85,7 @@
                     </ul>
                 </li>
                 <li><a href="#">Khu nội trú</a>
-                    <ul class="noitru">
+                    <ul class="Boarding">
                         <li><a href=""><i id="about1" class="fa-solid fa-circle-play"></i>Ban quản lý khu nội trú</a></li> 
                         <li><a href=""><i id="about1" class="fa-solid fa-circle-play"></i>Nội quy khu nội trú</a></li>
                         <li><a href=""><i id="about1" class="fa-solid fa-circle-play"></i>Hoạt động khu nội trú</a></li>
@@ -93,13 +93,13 @@
                     </ul>
                 </li>
                 <li><a href="#">Tài nguyên</a>
-                    <ul class="tainguyen">
+                    <ul class="resources">
                         <li><a href=""><i id="about1" class="fa-solid fa-circle-play"></i>Tư liệu dạy và học</a></li> 
                         <li><a href=""><i id="about1" class="fa-solid fa-circle-play"></i>Thư viện video</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Giáo dục - Khoa học</a>
-                    <ul class="giaoduc">
+                    <ul class="education">
                         <li><a href=""><i id="about1" class="fa-solid fa-circle-play"></i>Chương trình GDPT 2018</a></li> 
                         <li><a href=""><i id="about1" class="fa-solid fa-circle-play"></i>Văn hóa xã hội</a></li>
                     </ul>
