--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website chính thức trường trung học phổ thông Chuyên Lê Hồng Phong </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="map.css">
     <link rel="stylesheet" href="./fontawesome-free-6.1.1-web/fontawesome-free-6.1.1-web/css/all.min.css">
 </head>
 
@@ -88,7 +88,7 @@
                     <ul class="contact">
                         <li><a href=""><i id="about1" class="fa-solid fa-circle-play"></i>Email</a></li> 
                         <li><a href=""><i id="about1" class="fa-solid fa-circle-play"></i>Số điện thoại</a></li>
-                        <li><a href="contact.html"><i id="about1" class="fa-solid fa-circle-play"></i>Map</a></li>
+                        <li><a href=""><i id="about1" class="fa-solid fa-circle-play"></i>Map</a></li>
 
                     </ul>
                 </li>
@@ -122,7 +122,7 @@
         <hr>
 
 
-        <div class="big-infomation">
+        <!-- <div class="big-infomation">
             <div class="articel">
                 <div class="articel-child">
                     <img src="/img/thivao10.png" alt="Danh sách thi">
@@ -185,8 +185,11 @@
                     <img src="/img/foolball.png" alt="">
                     <a href="">Giao lưu bóng đá Chào mừng kỷ niệm 47 năm Giải phóng Miền ...</a>
                 </div> -->
-            </div>
+            </div>  
 
+        </div> 
+        <div class="map">
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1npK0_3dMkfMxoSFIEEmLMd36cMxkqE8&ehbc=2E312F" width="100%" height="480"></iframe>
         </div>
 
         <footer>
@@ -231,7 +234,7 @@
     <!-- <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v14.0&appId=1188820395211191&autoLogAppEvents=1" nonce="S2K4YAFk"></script>
     <div class="fb-like" data-href="https://asm-thiet-ke-web.vercel.app/" data-width="" data-layout="button" data-action="like" data-size="small" data-share="true"></div> -->
     
-    <script src="https://uhchat.net/code.php?f=1d9580"></script>
+    <script  src="https://uhchat.net/code.php?f=1d9580"></script>
 </body>
 
 </html>
