--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
 
             <div class="aside">
                 <h3>
-                    <i id="bell" class="fa-solid fa-bell"></i> Tin mới nhận
+                    <a href=""> <i id="bell" class="fa-solid fa-bell"></i> Tin mới nhận</a>
+                   
                 </h3>
                 <div class="new">
                     <img src="/img/da banh.png" alt="Giao lưu bóng đá">
