--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" type="image/x-icon" href="/img/logooooo.png">
+    <link rel="icon"  href="/img/logooooo.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <audio autoplay="loop" src="mp4/y2mate.com - Ngọt vc Đen  Cho Tôi Lang Thang_144p.3gp"></audio>
     <div class="container">
         <header>
             <div class="logo">
@@ -120,6 +121,7 @@
 
 
         <div class="banner">
+            <!-- <iframe src="https://albumizr.com/a/6G84" scrolling="no" frameborder="0" allowfullscreen width="auto" height="auto"></iframe> -->
         </div>
         <div class="backgourd">
         
