--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    
     <div class="container">
         <header>
             <div class="logo">
@@ -154,6 +155,9 @@
                 </div>
 
             </form>
+            <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
+    async defer>
+</script>
         </div>
         <div class="map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3738.7280055275874!2d106.18344383139261!3d20.4352712790428!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135e7391bf25163%3A0x4c65ff0561a8b328!2zVHLGsOG7nW5nIFRIUFQgY2h1ecOqbiBMw6ogSOG7k25nIFBob25n!5e0!3m2!1svi!2s!4v1655024997668!5m2!1svi!2s"  width="700" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -197,6 +201,9 @@
 
 
     </div>
+    
+
+
     <!--END CONTAINER-->
 
     <!-- <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v14.0&appId=1188820395211191&autoLogAppEvents=1" nonce="S2K4YAFk"></script>
