--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         function Previous() {
             index--;
             if (index < 0)
-                index = 0
+                index = img.length
             var anh = document.getElementById('banner')
             anh.src = img[index].src
 
